--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@
 body {
   color: #fff;
   background-image: url(imagenes/peliculas.jpg); 
-  background-attachment: fixed; /*es para que la imagen de fondo quede fija al bajar la pagina*/
+  /* background-attachment: fixed; es para que la imagen de fondo quede fija al bajar la pagina */
   /*height: 100%;*/
   /*font: bold 16px "Georgia", serif;*/
   /* background: #000; modificamos el color de la esquina al bajar */
@@ -202,11 +202,11 @@ h4 {
   
   .menu-btn {
     display: block;
-    transition: all 5s ease; 
+    /* transition: all 10s ease;  */
   }
 
   .menu-btn img:hover {
-    filter: drop-shadow(1px 1px 1px  blue);
+    filter: drop-shadow(1px 1px 10px  #fff);
   }
 
   .menu {
@@ -227,6 +227,8 @@ h4 {
     /* text-align: center; */
     /* align-items: center; */
   }
+
+  /*separacion entre botnes del menu*/
   .menu-i{
     margin: 10px;
   }
@@ -234,6 +236,7 @@ h4 {
   .menu.active {
     transform: translateX(0); /*para activar nuestro menu lateral*/
   }
+
 }
 
 /*aqui editamos el buscador ......////////////////////////////////////////////////////////////////*/
@@ -338,8 +341,8 @@ h4 {
 .todo {
   width: 85%;
   height: 530px;
-  padding: 0px;
-  margin: 0px auto 20px auto;
+  padding: 0px auto;
+  margin: 0px auto;
   text-align: center; 
   border-radius: 20px;
   background: #161f26db;
@@ -386,8 +389,9 @@ h4 {
   height: 444px;
   border-radius: 20px;
   position: absolute;
-  /* padding: 0px; */
-  /* margin: 0px;  */
+  /* margin: 0px auto; */
+  /* padding: 0px auto;
+  margin: 0px auto;  */
   /* background: #000; */
   box-shadow: inset 0px -20px 19px -5px rgba(0,0,0,1); /*pone sombra interna en la parte de abajo*/
 }
@@ -402,8 +406,8 @@ h4 {
   justify-content: center;
   user-select: none;
   cursor: pointer; /*pone una manito al pasar el mause por encima*/
-  /* margin: 100px 10px 0px 10px; */
-  /* padding: 0px; */
+  /* margin: center;
+  padding: center; */
   /* box-shadow: 0px 10px 16px -10px #fff; */
 
   /* background: #000; */
@@ -466,8 +470,7 @@ h4 {
   transition: .5s ease;
   font-weight: bold;
 }
-
-
+ 
 
 .carousel .indicators .indicator-item {
   width: 20px; /*ancho*/
@@ -477,6 +480,19 @@ h4 {
   background: red;
   transform: rotate(50deg); /*para girar en grado en este los puntitos del carousel*/
 }
+
+@media (max-width: 1000px) {
+
+  .carousel .indicators .indicator-item {
+    width: 5px; /*ancho*/
+    height: 5px; /*alto*/
+    margin: 50px 5px 0px 20px;
+    /* border-radius: 10%; */
+    background: red;
+    transform: rotate(50deg); /*para girar en grado en este los puntitos del carousel*/
+  }
+}
+
 .n{
   background: #000;
 }
